bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:4: error: ')' expected but '=>' found.
    case (n <= 110 || n => 90) => true
                        ^NearHundred:8: error: '=>' expected but '}' found.
  }
  ^