bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  
	nearHundred(n) match {
    case (n <= 110 || n => 90) => true
    case (n <= 210 || n => 190) => true
    case _ => false
  
  }
  
}